jswt-semantics/src/desugaring/snapshots/jswt_semantics__desugaring__test__class_declaration_desugars_into_functions.snap
---
source: jswt-semantics/src/desugaring/mod.rs
expression: ast

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 43,
                                    end: 100,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 43,
                                        end: 100,
                                    },
                                    value: "Array#constructor",
                                },
                                params: FormalParameterList {
                                    parameters: [
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 55,
                                                    end: 58,
                                                },
                                                value: "len",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 60,
                                                    end: 63,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 65,
                                                    end: 73,
                                                },
                                                value: "capacity",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 75,
                                                    end: 78,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test.1",
                                            module: "module/test.1",
                                            start: 43,
                                            end: 100,
                                        },
                                        ty: Primitive(
                                            I32,
                                        ),
                                    },
                                ),
                                body: BlockStatement {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 80,
                                        end: 100,
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
