jswt-semantics/src/desugaring/snapshots/jswt_semantics__desugaring__test__class_declaration_desugars_new_expression.snap
---
source: jswt-semantics/src/desugaring/mod.rs
expression: ast

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 43,
                                    end: 100,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 43,
                                        end: 100,
                                    },
                                    value: "Array#constructor",
                                },
                                params: FormalParameterList {
                                    parameters: [
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 55,
                                                    end: 58,
                                                },
                                                value: "len",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 60,
                                                    end: 63,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 65,
                                                    end: 73,
                                                },
                                                value: "capacity",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 75,
                                                    end: 78,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test.1",
                                            module: "module/test.1",
                                            start: 43,
                                            end: 100,
                                        },
                                        ty: Primitive(
                                            I32,
                                        ),
                                    },
                                ),
                                body: FunctionBody {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 43,
                                        end: 100,
                                    },
                                    source_elements: SourceElements {
                                        source_elements: [],
                                    },
                                },
                            },
                        ),
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 128,
                                    end: 200,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 137,
                                        end: 141,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    parameters: [],
                                },
                                returns: None,
                                body: FunctionBody {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 144,
                                        end: 200,
                                    },
                                    source_elements: SourceElements {
                                        source_elements: [
                                            Statement(
                                                Variable(
                                                    VariableStatement {
                                                        span: Span {
                                                            file: "test.1",
                                                            module: "module/test.1",
                                                            start: 162,
                                                            end: 186,
                                                        },
                                                        modifier: Let(
                                                            Span {
                                                                file: "test.1",
                                                                module: "module/test.1",
                                                                start: 162,
                                                                end: 165,
                                                            },
                                                        ),
                                                        target: Identifier(
                                                            Identifier {
                                                                span: Span {
                                                                    file: "test.1",
                                                                    module: "module/test.1",
                                                                    start: 166,
                                                                    end: 167,
                                                                },
                                                                value: "x",
                                                            },
                                                        ),
                                                        expression: Arguments(
                                                            ArgumentsExpression {
                                                                span: Span {
                                                                    file: "test.1",
                                                                    module: "module/test.1",
                                                                    start: 174,
                                                                    end: 185,
                                                                },
                                                                ident: Identifier(
                                                                    IdentifierExpression {
                                                                        span: Span {
                                                                            file: "test.1",
                                                                            module: "module/test.1",
                                                                            start: 174,
                                                                            end: 179,
                                                                        },
                                                                        ident: Identifier {
                                                                            span: Span {
                                                                                file: "test.1",
                                                                                module: "module/test.1",
                                                                                start: 174,
                                                                                end: 179,
                                                                            },
                                                                            value: "Array#constructor",
                                                                        },
                                                                    },
                                                                ),
                                                                arguments: ArgumentsList {
                                                                    span: Span {
                                                                        file: "test.1",
                                                                        module: "module/test.1",
                                                                        start: 179,
                                                                        end: 185,
                                                                    },
                                                                    arguments: [
                                                                        Literal(
                                                                            Integer(
                                                                                IntegerLiteral {
                                                                                    span: Span {
                                                                                        file: "test.1",
                                                                                        module: "module/test.1",
                                                                                        start: 180,
                                                                                        end: 181,
                                                                                    },
                                                                                    value: 1,
                                                                                },
                                                                            ),
                                                                        ),
                                                                        Literal(
                                                                            Integer(
                                                                                IntegerLiteral {
                                                                                    span: Span {
                                                                                        file: "test.1",
                                                                                        module: "module/test.1",
                                                                                        start: 183,
                                                                                        end: 184,
                                                                                    },
                                                                                    value: 2,
                                                                                },
                                                                            ),
                                                                        ),
                                                                    ],
                                                                },
                                                            },
                                                        ),
                                                        type_annotation: None,
                                                    },
                                                ),
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
